dev/bases/veidemann/cache-balancer_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-cache-balancer
spec:
  template:
    spec:
      containers:
        - name: veidemann-cache-balancer
