dev/bases/veidemann/cache_env_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: veidemann-cache
spec:
  template:
    spec:
      containers:
        - name: veidemann-cache
