dev/bases/veidemann/contentexplorer_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-contentexplorer
spec:
  template:
    spec:
      containers:
        - name: veidemann-contentexplorer
