dev/bases/veidemann/contentwriter_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-contentwriter
spec:
  template:
    spec:
      containers:
        - name: veidemann-contentwriter
