dev/bases/veidemann/contentwriter_volume_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-contentwriter
spec:
  template:
    spec:
      containers:
        - name: veidemann-contentwriter
          volumeMounts:
            - name: warcs
              mountPath: /warcs
              subPath: warcs
      volumes:
        - name: warcs
          persistentVolumeClaim:
            claimName: veidemann-warcs
          emptyDir: # unset emptyDir from base
