dev/bases/veidemann/dashboard_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-dashboard
spec:
  template:
    spec:
      volumes:
        - name: versions
          configMap:
            name: veidemann-version
            items:
              - key: versions.json
                path: versions.json

      containers:
        - name: veidemann-dashboard
          volumeMounts:
            - mountPath: /usr/share/nginx/html/veidemann/assets/versions.json
              subPath: versions.json
              name: versions
