dev/bases/veidemann/dnsresolver_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-dns-resolver
spec:
  template:
    spec:
      containers:
        - name: veidemann-dns-resolver
