dev/bases/veidemann/dnsresolver_volume_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-dns-resolver
spec:
  template:
    spec:
      volumes:
        - name: corefile
          configMap:
            name: veidemann-dns-resolver
            items:
              - key: Corefile
                path: Corefile
      containers:
        - name: veidemann-dns-resolver
          volumeMounts:
            - name: corefile
              mountPath: /Corefile
              subPath: Corefile
