dev/bases/veidemann/frontier_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-frontier
spec:
  template:
    spec:
      containers:
        - name: veidemann-frontier
