dev/bases/veidemann/harvester_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-harvester
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: veidemann-harvester
        - name: veidemann-harvester-proxy
