dev/bases/veidemann/harvester_log_level_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-harvester
spec:
  template:
    spec:
      containers:
        - name: veidemann-browser-controller
