dev/bases/veidemann/health-check_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-health-check-api
spec:
  template:
    spec:
      containers:
        - name: veidemann-health-check-api
