dev/bases/veidemann/metrics_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-metrics
spec:
  template:
    spec:
      containers:
        - name: veidemann-metrics
