dev/bases/veidemann/ooshandler_volume_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-ooshandler
spec:
  template:
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: veidemann-backup
          emptyDir: # unset emptyDir from base
