dev/bases/veidemann/rethinkdb-exporter_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rethinkdb-exporter
spec:
  template:
    spec:
      containers:
        - name: rethinkdb-exporter
