dev/bases/veidemann/robotsevaluator_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-robotsevaluator-service
spec:
  template:
    spec:
      containers:
        - name: veidemann-robotsevaluator-service
