dev/bases/veidemann/warcvalidator_api_env_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-warcvalidator-api
spec:
  template:
    spec:
      containers:
        - name: veidemann-warcvalidator-api
