dev/bases/veidemann/warcvalidator_volume_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-warcvalidator
spec:
  template:
    spec:
      volumes:
        - name: warcs
          persistentVolumeClaim:
            claimName: veidemann-warcs
          emptyDir: # unset emptyDir from base
